  * [arm64] Enable REGULATOR_FAN53555 as a module, enabling cpufreq to
    work on rk3399 A72 cores.
  * [arm64] Apply patch from linux-next to fix eMMC corruption on
    Odroid-C2 (Closes: #879072).

  [ Ben Hutchings ]
  * debian/control: Update profile qualification for build-deps on bison
    and flex, which are now used to build kconfig

 -- Uwe Kleine-König <ukleinek@debian.org>  Fri, 23 Feb 2018 13:08:33 +0100

linux (4.15.4-1) unstable; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_4.15
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.15.1
    - Bluetooth: hci_serdev: Init hci_uart proto_lock to avoid oops
    - tools/gpio: Fix build error with musl libc
    - gpio: stmpe: i2c transfer are forbiden in atomic context
    - gpio: Fix kernel stack leak to userspace
    - scsi: storvsc: missing error code in storvsc_probe()
    - staging: lustre: separate a connection destroy from free struct kib_conn
    - staging: ccree: NULLify backup_info when unused
    - staging: ccree: fix fips event irq handling build
    - usb: option: Add support for FS040U modem
    - serial: 8250_dw: Revert "Improve clock rate setting"
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.15.2
    - [x86] KVM: Make indirect calls in emulator speculation safe
    - [x86] KVM: VMX: Make indirect call speculation safe
    - module/retpoline: Warn about missing retpoline in module
    - [x86] cpufeatures: Add CPUID_7_EDX CPUID leaf
    - [x86] cpufeatures: Add Intel feature bits for Speculation Control
    - [x86] cpufeatures: Add AMD feature bits for Speculation Control
    - [x86] msr: Add definitions for new speculation control MSRs
    - [x86] pti: Do not enable PTI on CPUs which are not vulnerable to
      Meltdown
    - [x86] cpufeature: Blacklist SPEC_CTRL/PRED_CMD on early Spectre v2
      microcodes