@@ -21,6 +21,7 @@ linux (4.16~rc5-1~exp1) UNRELEASED; urgency=medium
   [ Ben Hutchings ]
   * debian/control: Update profile qualification for build-deps on bison
     and flex, which are now used to build kconfig
+  * debian/rules.d/tools/kconfig/Makefile: Use bison and flex to build kconfig
 
  -- Uwe Kleine-König <ukleinek@debian.org>  Fri, 23 Feb 2018 13:08:33 +0100
 
